terraform-docker-airpair/aws-vpc.tf
provider "aws" {
    region = "${var.region}"
}

resource "aws_vpc" "default" {
    cidr_block = "${var.vpc_cidr}"
    enable_dns_hostnames = true
    tags {
        Name = "airpair-example"
    }
}
